backwards compatibility changes for strings & vars, remove travis